# Thrift-CPP-iOS

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  main.cc
build-ios/LibCore-prefix/src/LibCore-stamp/: LibCore-source_dirinfo.txt
build-ios/LibCore-prefix/tmp/: LibCore-cache-.cmake  LibCore-cfgcmd.txt  LibCore-mkdirs.cmake
build-ios/SDKThirdParty-prefix/src/SDKThirdParty-build/boost-prefix/src/boost-stamp/: boost-source_dirinfo.txt
build-ios/SDKThirdParty-prefix/src/SDKThirdParty-build/boost-prefix/tmp/: boost-mkdirs.cmake
build-ios/SDKThirdParty-prefix/src/SDKThirdParty-build/openssl-prefix/src/openssl-stamp/: openssl-source_dirinfo.txt
build-ios/SDKThirdParty-prefix/src/SDKThirdParty-build/openssl-prefix/tmp/: openssl-cfgcmd.txt  openssl-mkdirs.cmake
build-ios/SDKThirdParty-prefix/src/SDKThirdParty-build/thrift-prefix/src/thrift-stamp/: thrift-source_dirinfo.txt
build-ios/SDKThirdParty-prefix/src/SDKThirdParty-build/thrift-prefix/tmp/: thrift-cache-.cmake  thrift-cfgcmd.txt  thrift-mkdirs.cmake
build-ios/SDKThirdParty-prefix/src/SDKThirdParty-build/zlib-prefix/src/zlib-build/: libz.1.2.11.dylib
build-ios/SDKThirdParty-prefix/src/SDKThirdParty-build/zlib-prefix/src/zlib-stamp/: zlib-source_dirinfo.txt
build-ios/SDKThirdParty-prefix/src/SDKThirdParty-build/zlib-prefix/tmp/: zlib-cfgcmd.txt  zlib-mkdirs.cmake
build-ios/SDKThirdParty-prefix/src/SDKThirdParty-stamp/: SDKThirdParty-source_dirinfo.txt
build-ios/SDKThirdParty-prefix/tmp/: SDKThirdParty-cache-.cmake  SDKThirdParty-cfgcmd.txt  SDKThirdParty-mkdirs.cmake
build-ios/staging/lib/: libz.1.2.11.dylib
build-ios/staging/share/pkgconfig/: zlib.pc
lib/: CMakeLists.txt  LibCore.cc  LibCore.hh
